--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.config.import=env.properties
+spring.config.import=
 
 spring.datasource.url=${db_url}
 spring.datasource.username=${db_username}
