--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.config.import=
 
-spring.datasource.url=${db_url}
-spring.datasource.username=${db_username}
-spring.datasource.password=${db_password}
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
