--- a/src/main/resources/twitter.properties
+++ b/src/main/resources/twitter.properties
@@ -1,5 +1,10 @@
-app.twitter.access-token=1660307828483973120-MtzzzrgM44wyri9w6ZnbN1zRSyz7R5
-app.twitter.access-token-secret=Gi9PIewF669nxVSMcUbzQGjgw1C5tdsmZSToj3vQxbSnr
-app.twitter.api-key=4eMOeOwNRwexaAzz4vz0epoGq
-app.twitter.api-key-secret=6iVABupT5pliRkQJq43Abv0nL0WhkjcyzknA4OwhF2dBfInoYF
+#app.twitter.access-token=1660307828483973120-MtzzzrgM44wyri9w6ZnbN1zRSyz7R5
+app.twitter.access-token=37527189-lC1ljP3jZuJQYLPRT4bUZeHOd0CuVXF4eDjovtKn8
+#app.twitter.access-token-secret=Gi9PIewF669nxVSMcUbzQGjgw1C5tdsmZSToj3vQxbSnr
+app.twitter.access-token-secret=8LOOjCgKeWdCjNeudLFXGriHUWCcCUpfBKePm3T46XxKz
+#app.twitter.api-key=4eMOeOwNRwexaAzz4vz0epoGq
+app.twitter.api-key=oBtz3DSDjxMBdF72h0sr8Rddu
+#app.twitter.api-key-secret=6iVABupT5pliRkQJq43Abv0nL0WhkjcyzknA4OwhF2dBfInoYF
+app.twitter.api-key-secret=w9Mnjk9qcdmrHE2VgHJWXsKQRDyKvU4lKT4RhQRT4dK0DY1xO2
 app.twitter.open-ai=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
+
