--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
-spring.config.import=env.properties
+#spring.config.import=env.properties
 
-spring.datasource.url=${db_url}
-spring.datasource.username=${db_username}
-spring.datasource.password=${db_password}
+#spring.datasource.url=${db_url}
+#spring.datasource.username=${db_username}
+#spring.datasource.password=${db_password}
+
+
+spring.config.import=
+
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
