removed increased pool size

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.datasource.url=
 spring.datasource.username=
 spring.datasource.password=
 
-spring.task.scheduling.pool.size=10
+#spring.task.scheduling.pool.size=10
