--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 #uncomment for local db
 #spring.config.import=env.properties
-#
+
 #spring.datasource.url=${db_url}
 #spring.datasource.username=${db_username}
 #spring.datasource.password=${db_password}
 
 
-#spring.config.import=
+spring.config.import=
 
 spring.datasource.url=
 spring.datasource.username=
