--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 #spring.datasource.password=${db_password}
 
 
-spring.config.import=
+#spring.config.import=
 
 spring.datasource.url=
 spring.datasource.username=
