changed twitter  props

--- a/src/main/resources/twitter.properties
+++ b/src/main/resources/twitter.properties
@@ -7,4 +7,4 @@ app.twitter.api-key=oBtz3DSDjxMBdF72h0sr8Rddu
 #app.twitter.api-key-secret=6iVABupT5pliRkQJq43Abv0nL0WhkjcyzknA4OwhF2dBfInoYF
 app.twitter.api-key-secret=w9Mnjk9qcdmrHE2VgHJWXsKQRDyKvU4lKT4RhQRT4dK0DY1xO2
 app.twitter.open-ai=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
-
+app.twitter.dadjokes-api-key=06b8cbe1f1mshc78c3e966686f05p1648b7jsnc8204dda4e82
