changed db credential

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 #uncomment for local db
 #spring.config.import=env.properties
 
-spring.datasource.url=${db_url}
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${db_username}
 spring.datasource.password=${db_password}
 
 
 #spring.config.import=
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/twitterbot
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #spring.datasource.username=postgres
 #spring.datasource.password=casapuerta
 
