--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 #uncomment for local db
 #spring.config.import=env.properties
 
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=${db_url}
 spring.datasource.username=${db_username}
 spring.datasource.password=${db_password}
-
-
-#spring.config.import=
 
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #spring.datasource.username=postgres
 #spring.datasource.password=casapuerta
+
+#spring.config.import=
+
 
 #spring.task.scheduling.pool.size=10
