--- a/procfile
+++ b/procfile
@@ -1,1 +1,2 @@
 web: java -jar target/twitterbot-0.0.1-SNAPSHOT.jar
+-Dspring.datasource.url=postgres://fvcxuuvrkbuazj:c1c2d172f52747998e85364397bdbd1ca59d9ea256460ce2821b4ab832fc06b8@ec2-18-211-172-50.compute-1.amazonaws.com:5432/da1pj80e0cjook
