--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #uncomment for local db
 #spring.config.import=env.properties
 
-spring.datasource.url={db_url}
+spring.datasource.url={DATABASE_URL}
 spring.datasource.username=${db_username}
 spring.datasource.password=${db_password}
 
