--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #uncomment for local db
 #spring.config.import=env.properties
 
-spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.url=jdbc:${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
