--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,8 +19,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.config.import=
 #spring.task.scheduling.pool.size=10
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+spring.mail.host=${SPRING_MAIL_HOST}
+spring.mail.port=${SPRING_MAIL_PORT}
 spring.mail.username=${SPRING_MAIL_USERNAME}
 spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
